# clairevoyance

./: .gitignore  CLAUDE.md  download_models.py  generate_transcripts.py  rename_dry_run.py  speaker_identification_research.md  transcribe.sh  transcribe_gpu.sh
claire/: README.md  claire.py  claude-md-snippet.md  download_models.py  hook-config.json  inject_transcript.py  live_diarization.md  nemo_stream.py  pyproject.toml
download/: download_models.py  pyproject.toml
offline/: README.md  generate_transcripts.py  pyproject.toml  rename_dry_run.py  transcribe.sh  transcribe_gpu.sh
